fix bug 137695, add japanese ime reconversion to mac, r=brade, sr=sfraser