widget/src/mac/nsMacEventHandler.h
@@ -170,6 +170,7 @@ public:
 		virtual nsresult 	HandleOffsetToPosition(long offset,Point* position);
 		virtual nsresult	HandleUpdateInputArea(char* text,Size text_size, ScriptCode textScript,long fixedLength,TextRangeArray* textRangeArray);
 		virtual nsresult	UnicodeHandleUpdateInputArea(PRUnichar* text, long charCount, long fixedLength,TextRangeArray* textRangeArray);
+		virtual nsresult	HandleUnicodeGetSelectedText(nsAString& outString);
 		virtual nsresult	ResetInputState();
 		virtual PRBool		HandleUKeyEvent(PRUnichar* text, long charCount, EventRecord& aOSEvent);
 		
