widget/src/mac/nsMacTSMMessagePump.h
@@ -65,10 +65,12 @@ private:
 	static pascal OSErr UpdateHandler(const AppleEvent *theAppleEvent, AppleEvent *reply, long handlerRefcon);
 	static pascal OSErr UnicodeUpdateHandler(const AppleEvent *theAppleEvent, AppleEvent *reply, long handlerRefcon);
 	static pascal OSErr UnicodeNotFromInputMethodHandler(const AppleEvent *theAppleEvent, AppleEvent *reply, long handlerRefcon);
+	static pascal OSErr UnicodeGetSelectedTextHandler(const AppleEvent *theAppleEvent, AppleEvent *reply, long handlerRefcon);
 	static AEEventHandlerUPP mPos2OffsetUPP;
 	static AEEventHandlerUPP mOffset2PosUPP;
 	static AEEventHandlerUPP mUpdateUPP;
 	static AEEventHandlerUPP mKeyboardUPP;
+	static AEEventHandlerUPP mGetSelectedTextUPP;
 	
 	static nsMacTSMMessagePump* gSingleton;
 
